v0.4.0 ()
  New features
	* Big refactor of the PuppetDB API.
	* New "fake" PuppetDB used for testing
	* Support of the caller_module_name variable.
	* Support for a dumpvariable() function.

v0.3.3 (2013/01/21)
  New features
	* Tries to find calcerb.rb next to the executable.
	* Started cleaning imports ...
	* It is now possible to write "top level" functions in lua.
	* Function getvar (stdlib)
	* TENTATIVE support for aliases.
	* Checks that file names don't have trailing slashes.
	* Checks that exec commands are fully qualified if path is not defined.
	* New native type : package.
  Bugs fixed
	* Fixed a ton of problems related to exported resources and relations.
	* Minor fix about zonerecord.
	* Resolving variable names starting with :: in templates
	* Fixed the file function.

v0.3.2 (2012/12/13)
  The license has been changed to BSD3.
  Bugs fixed
	* It is now possible to use expressions in include blocks. This is
	temporary, as include should be handled just like every other function.

v0.3.1 (2012/11/23)
  New features
	* Yes, we can generate JSon catalogs now.
  Bugs fixed
	* Several bugs about resource relationships.

v0.3.0 (2012/11/19)
  New features
	* Resource relationships are somehow supported. The API is broken as a
	result.
	* Exported resources are now returned.

v0.2.2 (2012/11/12)
  New features
	* A few statistics are exported.

v0.2.1 (2012/11/12)
  Bugs fixed
	* The defaults system was pretty much broken, it should be better now.
  New features
	* Basic testing framework started.
	* create_resources now supports the defaults system.
	* defined() function works for resource references.
	* in operator implemented for hashes.
	* Multithreading works.
	* The ruby <> daemon communication is now over ByteStrings.
	* The toRuby function has been optimized, doubling the overall speed for
	rendering complex catalogs.
	* Various internal changes.

v0.2.0 (2012/10/08)
  New features
	* Lua integration for custom functions.